#41-feat(server): implement checkout endpoint
