# server/src/repositories/item.repository.ts
@@ -1,3 +1,4 @@
+/* eslint-disable @typescript-eslint/no-explicit-any */
 import { Item } from "../models/item";
 import { MySqlConnection } from "../core/mysql/mysql.connection";
 import { DependencyContainer, DependencyLifeTime, Injectable } from "@miracledevs/paradigm-web-di";
@@ -7,5 +8,12 @@ import { EditRepositoryBase } from "../core/repositories/edit.repository";
 export class ItemRepository extends EditRepositoryBase<Item> {
     constructor(dependecyContainer: DependencyContainer, connection: MySqlConnection) {
         super(dependecyContainer, connection, Item, "item");
+    }
+    async insertItem(columns: string[], args: any[]) {
+        const [rows] = await this.connection.connection.execute(
+            `INSERT INTO \`${this.tableName}\` (?) VALUES (?) ON DUPLICATE KEY UPDATE quantity=quantity+1`,
+            [columns, args]
+        );
+        return this.map(rows, this.entityType);
     }
 }
